[gd_scene load_steps=6 format=3 uid="uid://b0udrxy5b2ojh"]

[ext_resource type="Script" path="res://HUD/hud.gd" id="1_dh580"]
[ext_resource type="Texture2D" uid="uid://dx132djonomiv" path="res://HUD/sprites/virus.png" id="1_skc1p"]
[ext_resource type="Texture2D" uid="uid://dqdlpfjg0yf4u" path="res://HUD/sprites/t_cell_sprite.png" id="2_onuet"]
[ext_resource type="Texture2D" uid="uid://hj3nxd31uhru" path="res://HUD/sprites/life_loss.png" id="3_0tyvy"]
[ext_resource type="Theme" uid="uid://b2g8ex2eim5as" path="res://util/game_theme.tres" id="3_077ka"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_dh580")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 0
alignment = 2

[node name="Points" type="TextureRect" parent="Control/MarginContainer/HBoxContainer2"]
visible = false
layout_mode = 2
texture = ExtResource("2_onuet")
expand_mode = 2

[node name="Score" type="Label" parent="Control/MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_077ka")
theme_override_colors/font_color = Color(0.588235, 0.847059, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Points: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_vertical = 0

[node name="Life1" type="TextureRect" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_skc1p")
expand_mode = 2

[node name="LifeLoss" type="NinePatchRect" parent="Control/MarginContainer/HBoxContainer/Life1"]
layout_mode = 2
offset_left = 64.0
offset_right = 64.0
offset_bottom = 60.0

[node name="LifeLoss1" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/Life1/LifeLoss"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = -64.0
offset_right = -4.0
offset_bottom = 60.0
texture = ExtResource("3_0tyvy")
expand_mode = 2

[node name="Life2" type="TextureRect" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_skc1p")
expand_mode = 2

[node name="LifeLoss" type="NinePatchRect" parent="Control/MarginContainer/HBoxContainer/Life2"]
layout_mode = 2
offset_left = 64.0
offset_right = 64.0
offset_bottom = 60.0

[node name="LifeLoss2" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/Life2/LifeLoss"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = -64.0
offset_right = -4.0
offset_bottom = 60.0
texture = ExtResource("3_0tyvy")
expand_mode = 2

[node name="Life3" type="TextureRect" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_skc1p")
expand_mode = 2

[node name="LifeLoss" type="NinePatchRect" parent="Control/MarginContainer/HBoxContainer/Life3"]
layout_mode = 2
offset_left = 64.0
offset_right = 64.0
offset_bottom = 60.0

[node name="LifeLoss3" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/Life3/LifeLoss"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = -64.0
offset_right = -4.0
offset_bottom = 60.0
texture = ExtResource("3_0tyvy")
expand_mode = 2
